{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 49,
  "lineage": "3c1f5ee9-de92-68d1-078a-28a352561443",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "host_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00ac244ee0ad9050d",
            "arn": "arn:aws:ec2:eu-central-1:311141561775:instance/i-028f75cc52d39f62f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "movie-reviews-ec2-instance-profile",
            "id": "i-028f75cc52d39f62f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "movie-reviews",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5d1b331f33a4e33",
            "private_dns": "ip-10-0-1-23.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.23",
            "public_dns": "ec2-3-75-187-98.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.75.187.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-019cd8969e97d38c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb5fb6ac69cf6b1e",
            "tags": {
              "App": "movie-reviews",
              "Name": "host-instance"
            },
            "tags_all": {
              "App": "movie-reviews",
              "Name": "host-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-02b693b56eb859b15",
              "sg-05f564cd004a5ccc8"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2-instance-profile",
            "aws_iam_role.ec2-role",
            "aws_security_group.allow-ssh",
            "aws_security_group.allow-web",
            "aws_subnet.subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:311141561775:internet-gateway/igw-0bc0230cd81f94a70",
            "id": "igw-0bc0230cd81f94a70",
            "owner_id": "311141561775",
            "tags": {
              "App": "movie-reviews",
              "Name": "main-igw"
            },
            "tags_all": {
              "App": "movie-reviews",
              "Name": "main-igw"
            },
            "vpc_id": "vpc-07f97d0a9ab6d2d00"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:311141561775:route-table/rtb-0be069c6f28da1022",
            "id": "rtb-0be069c6f28da1022",
            "owner_id": "311141561775",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc0230cd81f94a70",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "App": "movie-reviews",
              "Name": "main-route-table"
            },
            "tags_all": {
              "App": "movie-reviews",
              "Name": "main-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f97d0a9ab6d2d00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bb67617769fccac",
            "route_table_id": "rtb-0be069c6f28da1022",
            "subnet_id": "subnet-0bb5fb6ac69cf6b1e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.main",
            "aws_subnet.subnet-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068318a8a75089023",
            "route_table_id": "rtb-0be069c6f28da1022",
            "subnet_id": "subnet-037a3d566b861d906"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.main",
            "aws_subnet.subnet-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:311141561775:security-group/sg-0136bf437c6c27d55",
            "description": "Allow inbound traffic for postgres and my personal computer to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0136bf437c6c27d55",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "allow-postgres",
            "name_prefix": "",
            "owner_id": "311141561775",
            "revoke_rules_on_delete": false,
            "tags": {
              "App": "movie-reviews",
              "Name": "allow-postgres"
            },
            "tags_all": {
              "App": "movie-reviews",
              "Name": "allow-postgres"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f97d0a9ab6d2d00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:311141561775:security-group/sg-02b693b56eb859b15",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b693b56eb859b15",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "311141561775",
            "revoke_rules_on_delete": false,
            "tags": {
              "App": "movie-reviews",
              "Name": "allow-ssh"
            },
            "tags_all": {
              "App": "movie-reviews",
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f97d0a9ab6d2d00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:311141561775:security-group/sg-05f564cd004a5ccc8",
            "description": "Allow inbound traffic for port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f564cd004a5ccc8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-web",
            "name_prefix": "",
            "owner_id": "311141561775",
            "revoke_rules_on_delete": false,
            "tags": {
              "App": "movie-reviews",
              "Name": "allow-web"
            },
            "tags_all": {
              "App": "movie-reviews",
              "Name": "allow-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f97d0a9ab6d2d00"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:311141561775:subnet/subnet-0bb5fb6ac69cf6b1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb5fb6ac69cf6b1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141561775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "App": "movie-reviews",
              "Name": "subnet-1"
            },
            "tags_all": {
              "App": "movie-reviews",
              "Name": "subnet-1"
            },
            "vpc_id": "vpc-07f97d0a9ab6d2d00"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:311141561775:subnet/subnet-037a3d566b861d906",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037a3d566b861d906",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141561775",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "App": "movie-reviews",
              "Name": "subnet-2"
            },
            "tags_all": {
              "App": "movie-reviews",
              "Name": "subnet-2"
            },
            "vpc_id": "vpc-07f97d0a9ab6d2d00"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:311141561775:vpc/vpc-07f97d0a9ab6d2d00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09eb2935c12e85b0e",
            "default_route_table_id": "rtb-0945a688b86073849",
            "default_security_group_id": "sg-0974bf629bfe6bdad",
            "dhcp_options_id": "dopt-055166cf9138b9884",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f97d0a9ab6d2d00",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0945a688b86073849",
            "owner_id": "311141561775",
            "tags": {
              "App": "movie-reviews"
            },
            "tags_all": {
              "App": "movie-reviews"
            }
          }
        }
      ]
    }
  ]
}